[package]
name = "tuikit"
version = "0.4.5"
authors = ["Jinzhou Zhang <lotabout@gmail.com>"]
description = "Toolkit for writing TUI applications"
documentation = "https://docs.rs/tuikit"
homepage = "https://github.com/lotabout/tuikit"
repository = "https://github.com/lotabout/tuikit"
readme  = "README.md"
keywords = ["tui", "terminal", "tty", "color"]
license = "MIT"
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
nix = "0.23.0"
bitflags = "1.3.2"
term = "0.7.0"
unicode-width = "0.1.9"
log = "0.4.14"

[dev-dependencies]
env_logger = "0.9.0"
